# Privateer

./: .gitignore  Privateer.cabal  Privateer.leo  Setup.hs  greedy-variable-layout.cabal  greedy-variable-layout.leo  simple-variable-layout.cabal  simple-variable-layout.leo
Algorithm/: VariableLayout.hs
Data/: VariableLayout.hs
src/: Common.hs  SizeAnalysis.hs  privateer-analyze.hs
src/Algorithm/GlobalVariablePrivatization/: Common.hs  Privatization.hs  SizeAnalysis.hs  VariableLayout.hs
tests/: CommonTestUtils.hs  CommonTests.hs  PrivatizationTests.hs  RunAnalysisTests.hs  SizeAnalysisTests.hs  VariableLayoutTests.hs  runtests.hs
tests/sources/: aliasing.c  manual-2.c  random-1.c  random-2.c  random-3.c  random-4.c  source1.c  sqlite3.c
