-- @+leo-ver=4-thin
-- @+node:gcross.20090709200011.3:@thin Privateer.cabal
-- @@language Haskell
Name:           Privateer
Version:        0.5
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Gregory Crosswhite
Homepage:       http://github.com/gcross/Privateer
Synopsis:       Automatic global variable privatization
Build-Type:     Simple

Executable privateer-analyze
  Build-Depends:  base >= 4,
                  language-c >= 0.3.1.1,
                  pretty >= 1.0.1,
                  containers >= 0.2.0.1,
                  stm >= 2.1.1.2,
                  syb,
                  mtl >= 1.1.0.2,
                  bytestring >= 0.9.1.4,
                  filepath >= 1.1.0.2,
                  directory >= 1.0.0.3,
                  haskell98,
                  FileManip >= 0.3.2,
                  stream-fusion >= 0.1.2.1,
                  bytestring >= 0.9.1.4,
                  bytestring-trie >= 0.1.4,
                  hexpat >= 0.8,
                  pointedlist >= 0.3.5,
                  data-accessor >= 0.2.1
  Main-Is:        privateer-analyze.hs
  Hs-Source-Dirs: src
  Other-Modules:  Algorithm.GlobalVariablePrivatization.SizeAnalysis
  GHC-Options:    -O0
-- @-node:gcross.20090709200011.3:@thin Privateer.cabal
-- @-leo
